<resources>
    <string name="app_name">TimetableApp</string>

    <string-array name="year">
        <item>1st YEAR</item>
        <item>2nd YEAR</item>
        <item>3rd YEAR</item>
        <item>4th YEAR</item>
    </string-array>
    <string name="class_timetable">Class Timetable</string>
    <string name="first_year">FIRST YEAR</string>
    <string name="second_year">SECOND YEAR</string>
    <string name="third_year">THIRD YEAR</string>
    <string name="fourth_year">FOURTH YEAR</string>

    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s cupcakes \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sell">Sell</string>
    <string name="subject_end_time">Subject End Time<font color='#FF0000'>*</font></string>
    <string name="subject_name_req">Subject Name <font color='#FF0000'>*</font></string>
    <string name="subject_start_time">Subject Start Time <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="subject_detail_fragment_title">Subject Details</string>
    <string name="add_fragment_title">Add Subject</string>
    <string name="edit_fragment_title">Edit Subject</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="subject">Subject</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="add_new_subject">Add new subject</string>

</resources>