<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.LoginFragment">

    <data>
        <variable
            name="loginFragment"
            type="com.example.timetableapp.fragment.LoginFragment" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <ImageView
                android:id="@+id/img"
            android:layout_width="187dp"
            android:layout_height="207dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            app:srcCompat="@mipmap/ic_lmeth" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/img"
                android:hint="@string/prompt_email"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/prompt_password"

                app:layout_constraintTop_toBottomOf="@+id/username"
                />
            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/password" />






    </LinearLayout>
    </ScrollView>
</layout>